--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Rent vs Buy Calculator | Chris Garrard Realty</title>
+    <title>Rent vs Buy & Sell Calculator | Chris Garrard Realty</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -28,6 +28,11 @@
             border-radius: 4px;
             border: 1px solid #ccc;
         }
+        .section {
+            border-top: 2px solid #ccc;
+            padding-top: 20px;
+            margin-top: 20px;
+        }
         .results {
             margin-top: 30px;
             padding: 15px;
@@ -48,42 +53,50 @@
 </head>
 <body>
 
-    <h1>Rent vs Buy Calculator</h1>
-    <p style="text-align:center;">Helping Families Make Smart Financial Decisions About Homeownership</p>
+    <h1>Rent vs Buy & Sell in 5 Years</h1>
+    <p style="text-align:center;">See the full breakdown of what you'd pay and keep</p>
 
-    <label>Home Purchase Price ($):</label>
-    <input type="number" id="homePrice" value="300000">
+    <div class="section">
+        <h2>Buying Inputs</h2>
+        <label>Home Purchase Price ($):</label>
+        <input type="number" id="homePrice" value="300000">
 
-    <label>Down Payment (%):</label>
-    <input type="number" id="downPayment" value="5">
+        <label>Down Payment (%):</label>
+        <input type="number" id="downPayment" value="5">
 
-    <label>Loan Interest Rate (%):</label>
-    <input type="number" id="interestRate" value="6.5">
+        <label>Loan Interest Rate (%):</label>
+        <input type="number" id="interestRate" value="6.5">
 
-    <label>Loan Term (years):</label>
-    <input type="number" id="loanTerm" value="30">
+        <label>Loan Term (years):</label>
+        <input type="number" id="loanTerm" value="30">
 
-    <label>Annual Property Taxes:</label>
-    <input type="number" id="propertyTaxes" value="0.5">
-    <select id="taxType">
-        <option value="percent">Percent of Home Value (%)</option>
-        <option value="fixed">Fixed Amount ($)</option>
-    </select>
+        <label>Annual Property Value Growth (%):</label>
+        <input type="number" id="growthRate" value="2">
 
-    <label>Annual Home Insurance ($):</label>
-    <input type="number" id="insurance" value="1500">
+        <label>Annual Property Taxes:</label>
+        <input type="number" id="propertyTaxes" value="0.5">
+        <select id="taxType">
+            <option value="percent">Percent of Home Value (%)</option>
+            <option value="fixed">Fixed Amount ($)</option>
+        </select>
 
-    <label>Annual Property Value Growth (%):</label>
-    <input type="number" id="growthRate" value="2">
+        <label>Annual Insurance Cost ($):</label>
+        <input type="number" id="insurance" value="1500">
+    </div>
 
-    <label>Monthly Rent ($):</label>
-    <input type="number" id="monthlyRent" value="1600">
+    <div class="section">
+        <h2>Renting Inputs</h2>
+        <label>Monthly Rent ($):</label>
+        <input type="number" id="monthlyRent" value="1600">
 
-    <label>Annual Rent Increase (%):</label>
-    <input type="number" id="rentIncrease" value="3">
+        <label>Annual Rent Increase (%):</label>
+        <input type="number" id="rentIncrease" value="3">
+    </div>
 
-    <label>Years to Compare:</label>
-    <input type="number" id="years" value="5">
+    <div class="section">
+        <label>Years to Compare:</label>
+        <input type="number" id="years" value="5">
+    </div>
 
     <div class="results" id="results"></div>
 
@@ -103,68 +116,78 @@
             const downPaymentPercent = getValue('downPayment');
             const interestRateMonthly = getValue('interestRate') / 100 / 12;
             const loanTermMonths = getValue('loanTerm') * 12;
-            const insurance = getValue('insurance');
-            const taxType = document.getElementById('taxType').value;
             const growthRate = getValue('growthRate') / 100;
+            const taxType = document.getElementById('taxType').value;
+            const propertyTaxInput = getValue('propertyTaxes');
+            const annualInsurance = getValue('insurance');
             let monthlyRent = getValue('monthlyRent');
             const rentIncrease = getValue('rentIncrease') / 100;
             const years = getValue('years');
+
+            const sellingCostPercent = 0.07;
             const annualStockReturn = 0.07;
             const stockReturnMonthly = Math.pow(1 + annualStockReturn, 1 / 12) - 1;
 
             const downPayment = homePrice * (downPaymentPercent / 100);
             const loanAmount = homePrice - downPayment;
-            const monthlyPayment = loanAmount * interestRateMonthly / (1 - Math.pow(1 + interestRateMonthly, -loanTermMonths));
+            const monthlyPI = loanAmount * interestRateMonthly / (1 - Math.pow(1 + interestRateMonthly, -loanTermMonths));
 
-            let totalBuyCost = downPayment;
+            let monthlyTax = 0;
+            if (taxType === 'percent') {
+                monthlyTax = (homePrice * (propertyTaxInput / 100)) / 12;
+            } else {
+                monthlyTax = propertyTaxInput / 12;
+            }
+            const monthlyInsurance = annualInsurance / 12;
+            const totalMonthlyMortgage = monthlyPI + monthlyTax + monthlyInsurance;
+
             let totalRentCost = 0;
             let homeValue = homePrice;
-            let monthlyDifference = 0;
-            let futureStockValue = 0;
+            let remainingLoan = loanAmount;
 
             for (let i = 1; i <= years; i++) {
-                const yearlyMortgage = monthlyPayment * 12;
-
-                let yearlyTaxes = 0;
-                if (taxType === 'percent') {
-                    yearlyTaxes = (getValue('propertyTaxes') / 100) * homeValue;
-                } else {
-                    yearlyTaxes = getValue('propertyTaxes');
-                }
-
-                const yearlyMaintenance = 0.015 * homeValue;
-                totalBuyCost += yearlyMortgage + yearlyTaxes + insurance + yearlyMaintenance;
-
                 homeValue *= (1 + growthRate);
                 totalRentCost += monthlyRent * 12;
                 monthlyRent *= (1 + rentIncrease);
+
+                remainingLoan = remainingLoan * Math.pow(1 + interestRateMonthly, 12) - (monthlyPI * ((Math.pow(1 + interestRateMonthly, 12) - 1) / interestRateMonthly));
             }
 
-            const averageAnnualRent = totalRentCost / years;
-            const averageMonthlyRent = averageAnnualRent / 12;
-            const equity = homeValue - loanAmount;
-            const netDifference = equity - totalRentCost;
+            const sellingCosts = homeValue * sellingCostPercent;
+            const cashAfterSale = homeValue - remainingLoan - sellingCosts;
 
-            monthlyDifference = monthlyPayment - averageMonthlyRent; // Difference between owning and renting
+            const averageMonthlyRent = totalRentCost / (years * 12);
+            const monthlyDifference = totalMonthlyMortgage - averageMonthlyRent;
 
-            // Stock return simulation: only invest if renting saves money
+            let futureStockValue = 0;
             if (monthlyDifference > 0) {
                 for (let m = 0; m < years * 12; m++) {
                     futureStockValue = (futureStockValue + monthlyDifference) * (1 + stockReturnMonthly);
                 }
             }
 
-            document.getElementById('results').innerHTML = `
-                <strong>Renting Total Cost:</strong> $${formatNumber(totalRentCost)}<br>
-                <strong>Buying Would Gain You:</strong> $${formatNumber(equity)}<br>
-                <strong>Net Difference:</strong> $${formatNumber(Math.abs(netDifference))} ${netDifference > 0 ? 'better to Buy' : 'better to Rent'}<br><br>
-                
-                <strong>Monthly Rent:</strong> $${formatNumber(averageMonthlyRent)}<br>
-                <strong>Estimated Mortgage Payment:</strong> $${formatNumber(monthlyPayment)}<br>
-                <strong>Monthly Difference (Mortgage - Rent):</strong> $${formatNumber(monthlyDifference)}<br><br>
+            const netRentLoss = totalRentCost - futureStockValue;
 
+            document.getElementById('results').innerHTML = `
+                <strong>Renting Total Cost Over ${years} Years:</strong> $${formatNumber(totalRentCost)}<br><br>
+
+                <strong>Estimated Home Value After ${years} Years:</strong> $${formatNumber(homeValue)}<br>
+                <strong>Remaining Loan Balance:</strong> $${formatNumber(remainingLoan)}<br>
+                <strong>Estimated Selling Costs (7%):</strong> $${formatNumber(sellingCosts)}<br>
+                <strong>Cash You’d Pocket After Selling:</strong> <strong>$${formatNumber(cashAfterSale)}</strong><br><br>
+
+                <strong>Monthly Breakdown:</strong><br>
+                Average Monthly Rent: $${formatNumber(averageMonthlyRent)}<br>
+                Estimated Monthly Mortgage (Principal + Taxes + Insurance): $${formatNumber(totalMonthlyMortgage)}<br>
+                Monthly Difference (Mortgage - Rent): $${formatNumber(monthlyDifference)}<br><br>
+
+                <strong>Investment Simulation:</strong><br>
                 If you rented and invested $${formatNumber(monthlyDifference)} per month at 7% annual return,<br>
-                you'd have about <strong>$${formatNumber(futureStockValue)}</strong> after ${years} years.
+                you'd have about <strong>$${formatNumber(futureStockValue)}</strong> after ${years} years.<br><br>
+
+                <strong>Net Result:</strong><br>
+                Renting cost you $${formatNumber(totalRentCost)} minus $${formatNumber(futureStockValue)} invested = Net Rent Loss: <strong>$${formatNumber(netRentLoss)}</strong><br>
+                Buying gave you <strong>$${formatNumber(cashAfterSale)}</strong> after selling.
             `;
         }
 
@@ -176,6 +199,7 @@
 
 </body>
 </html>
+
 
 
 
