--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Rent vs Buy & Sell Calculator | Chris Garrard Realty</title>
+    <title>Rent vs Buying | Chris Garrard</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -53,7 +53,7 @@
 </head>
 <body>
 
-    <h1>Rent vs Buy & Sell in 5 Years</h1>
+    <h1>Rent vs Buying Calculator</h1>
     <p style="text-align:center;">See the full breakdown of what you'd pay and keep</p>
 
     <div class="section">
