--- a/index.html
+++ b/index.html
@@ -93,6 +93,145 @@
         </div>
         <div class="form-group">
             <label>Rent Increase (%/yr)</label>
+            <input type="number" id="rentIncrease" value="3">
+        </div>
+        <div class="form-group">
+            <label>Years</label>
+            <input type="number" id="years" value="10">
+        </div>
+        <div class="form-group">
+            <label>Investment Return (%/yr)</label>
+            <input type="number" id="investmentReturn" value="7">
+        </div>
+    </div>
+
+    <canvas id="comparisonChart" width="100%"></canvas>
+
+    <footer>
+        Blue = Buying Cash-Out | Orange = Rent Paid | Green = Investment Growth<br>
+        Chris Garrard | Veteran-Owned Real Estate
+    </footer>
+
+    <script>
+        let chart;
+
+        function calculate() {
+            const getValue = (id) => parseFloat(document.getElementById(id).value) || 0;
+
+            const homePrice = getValue('homePrice');
+            const downPaymentPercent = getValue('downPayment');
+            const interestRateMonthly = getValue('interestRate') / 100 / 12;
+            const growthRate = getValue('growthRate') / 100;
+            const taxType = document.getElementById('taxType').value;
+            const propertyTaxInput = getValue('propertyTaxes');
+            const annualInsurance = getValue('insurance');
+            let monthlyRent = getValue('monthlyRent');
+            const rentIncrease = getValue('rentIncrease') / 100;
+            const years = getValue('years');
+            const annualStockReturn = getValue('investmentReturn') / 100;
+            const stockReturnMonthly = Math.pow(1 + annualStockReturn, 1 / 12) - 1;
+
+            const downPayment = homePrice * (downPaymentPercent / 100);
+            const loanAmount = homePrice - downPayment;
+            const monthlyPI = loanAmount * interestRateMonthly / (1 - Math.pow(1 + interestRateMonthly, -30 * 12));
+
+            let monthlyTax = (taxType === 'percent') ? (homePrice * (propertyTaxInput / 100)) / 12 : propertyTaxInput / 12;
+            const monthlyInsurance = annualInsurance / 12;
+            const totalMonthlyMortgage = monthlyPI + monthlyTax + monthlyInsurance;
+
+            let rentPaid = 0;
+            let homeValue = homePrice;
+            let remainingLoan = loanAmount;
+            let futureStockValue = 0;
+
+            let rentData = [];
+            let buyData = [];
+            let investData = [];
+            let labels = [];
+
+            for (let i = 1; i <= years; i++) {
+                rentPaid += monthlyRent * 12;
+                monthlyRent *= (1 + rentIncrease);
+                homeValue *= (1 + growthRate);
+
+                remainingLoan = remainingLoan * Math.pow(1 + interestRateMonthly, 12) - (monthlyPI * ((Math.pow(1 + interestRateMonthly, 12) - 1) / interestRateMonthly));
+
+                const sellingCosts = homeValue * 0.07;
+                const cashAfterSale = homeValue - remainingLoan - sellingCosts;
+
+                const monthlyDifference = totalMonthlyMortgage - (rentPaid / i / 12);
+                if (monthlyDifference > 0) {
+                    for (let m = 0; m < 12; m++) {
+                        futureStockValue = (futureStockValue + monthlyDifference) * (1 + stockReturnMonthly);
+                    }
+                }
+
+                labels.push(i + ' yr');
+                rentData.push(rentPaid);
+                buyData.push(cashAfterSale);
+                investData.push(futureStockValue);
+            }
+
+            updateChart(labels, rentData, buyData, investData);
+        }
+
+        function updateChart(labels, rentData, buyData, investData) {
+            const ctx = document.getElementById('comparisonChart').getContext('2d');
+            if (chart) chart.destroy();
+
+            chart = new Chart(ctx, {
+                type: 'line',
+                data: {
+                    labels: labels,
+                    datasets: [
+                        {
+                            label: 'Rent Paid',
+                            data: rentData,
+                            borderColor: '#e67e22',
+                            fill: false,
+                            tension: 0.3
+                        },
+                        {
+                            label: 'Buying Cash-Out',
+                            data: buyData,
+                            borderColor: '#2980b9',
+                            fill: false,
+                            tension: 0.3
+                        },
+                        {
+                            label: 'Investment Growth',
+                            data: investData,
+                            borderColor: '#27ae60',
+                            fill: false,
+                            tension: 0.3
+                        }
+                    ]
+                },
+                options: {
+                    responsive: true,
+                    maintainAspectRatio: false,
+                    scales: {
+                        y: {
+                            beginAtZero: true,
+                            ticks: {
+                                callback: function(value) {
+                                    return '$' + value.toLocaleString();
+                                }
+                            }
+                        }
+                    }
+                }
+            });
+        }
+
+        document.querySelectorAll('input, select').forEach(el => {
+            el.addEventListener('input', calculate);
+        });
+        window.onload = calculate;
+    </script>
+
+</body>
+</html>
 
 
 
