--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             flex-wrap: wrap;
             gap: 10px;
             justify-content: space-between;
-            margin-bottom: 15px;
+            margin-bottom: 10px;
         }
         .form-section label {
             font-size: 13px;
@@ -45,6 +45,17 @@
             margin-top: 10px;
             max-height: 300px;
         }
+        .summary {
+            font-size: 14px;
+            background: #fff;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            margin-top: 10px;
+        }
+        .summary strong {
+            color: #2980b9;
+        }
         footer {
             margin-top: 10px;
             text-align: center;
@@ -59,6 +70,7 @@
     <h1>Rent vs Buy Trend Calculator</h1>
 
     <div class="form-section">
+        <!-- Same inputs as before -->
         <div class="form-group">
             <label>Home Price ($)</label>
             <input type="number" id="homePrice" value="300000">
@@ -99,21 +111,23 @@
             <label>Years</label>
             <input type="number" id="years" value="10">
         </div>
-        <div class="form-group">
-            <label>Investment Return (%/yr)</label>
-            <input type="number" id="investmentReturn" value="7">
-        </div>
     </div>
 
     <canvas id="comparisonChart" width="100%"></canvas>
 
+    <div class="summary" id="summary"></div>
+
     <footer>
-        Blue = Buying Cash-Out | Orange = Rent Paid | Green = Investment Growth<br>
+        Blue = Buy Cost | Orange = Rent Cost<br>
         Chris Garrard | Veteran-Owned Real Estate
     </footer>
 
     <script>
         let chart;
+
+        function formatNumber(num) {
+            return num.toLocaleString('en-US', { minimumFractionDigits: 0, maximumFractionDigits: 0 });
+        }
 
         function calculate() {
             const getValue = (id) => parseFloat(document.getElementById(id).value) || 0;
@@ -128,8 +142,6 @@
             let monthlyRent = getValue('monthlyRent');
             const rentIncrease = getValue('rentIncrease') / 100;
             const years = getValue('years');
-            const annualStockReturn = getValue('investmentReturn') / 100;
-            const stockReturnMonthly = Math.pow(1 + annualStockReturn, 1 / 12) - 1;
 
             const downPayment = homePrice * (downPaymentPercent / 100);
             const loanAmount = homePrice - downPayment;
@@ -142,12 +154,12 @@
             let rentPaid = 0;
             let homeValue = homePrice;
             let remainingLoan = loanAmount;
-            let futureStockValue = 0;
 
             let rentData = [];
             let buyData = [];
-            let investData = [];
             let labels = [];
+
+            let breakevenYear = null;
 
             for (let i = 1; i <= years; i++) {
                 rentPaid += monthlyRent * 12;
@@ -159,23 +171,35 @@
                 const sellingCosts = homeValue * 0.07;
                 const cashAfterSale = homeValue - remainingLoan - sellingCosts;
 
-                const monthlyDifference = totalMonthlyMortgage - (rentPaid / i / 12);
-                if (monthlyDifference > 0) {
-                    for (let m = 0; m < 12; m++) {
-                        futureStockValue = (futureStockValue + monthlyDifference) * (1 + stockReturnMonthly);
-                    }
-                }
+                const buyNetCost = downPayment + (totalMonthlyMortgage * i * 12) - cashAfterSale;
 
-                labels.push(i + ' yr');
                 rentData.push(rentPaid);
-                buyData.push(cashAfterSale);
-                investData.push(futureStockValue);
+                buyData.push(buyNetCost);
+                labels.push(i + ' yr');
+
+                if (!breakevenYear && buyNetCost < rentPaid) {
+                    breakevenYear = i;
+                }
             }
 
-            updateChart(labels, rentData, buyData, investData);
+            updateChart(labels, rentData, buyData);
+
+            const lastYear = years;
+            const rentFinal = rentData[years - 1];
+            const buyFinal = buyData[years - 1];
+            const diff = Math.abs(rentFinal - buyFinal);
+            const betterOption = (rentFinal < buyFinal) ? "Renting" : "Buying";
+
+            document.getElementById('summary').innerHTML = `
+                <strong>Year ${lastYear} Summary:</strong><br>
+                Total Rent Cost: $${formatNumber(rentFinal)}<br>
+                Total Buy Net Cost: $${formatNumber(buyFinal)}<br>
+                Difference: $${formatNumber(diff)} (${betterOption} is better)<br><br>
+                ${breakevenYear ? `<strong>Breakeven:</strong> After ${breakevenYear} years, buying becomes cheaper.` : `<strong>No breakeven in ${years} years</strong>`}
+            `;
         }
 
-        function updateChart(labels, rentData, buyData, investData) {
+        function updateChart(labels, rentData, buyData) {
             const ctx = document.getElementById('comparisonChart').getContext('2d');
             if (chart) chart.destroy();
 
@@ -185,23 +209,16 @@
                     labels: labels,
                     datasets: [
                         {
-                            label: 'Rent Paid',
+                            label: 'Rent Cost',
                             data: rentData,
                             borderColor: '#e67e22',
                             fill: false,
                             tension: 0.3
                         },
                         {
-                            label: 'Buying Cash-Out',
+                            label: 'Buy Net Cost',
                             data: buyData,
                             borderColor: '#2980b9',
-                            fill: false,
-                            tension: 0.3
-                        },
-                        {
-                            label: 'Investment Growth',
-                            data: investData,
-                            borderColor: '#27ae60',
                             fill: false,
                             tension: 0.3
                         }
@@ -232,6 +249,7 @@
 
 </body>
 </html>
+
 
 
 
